dist_man1_MANS=

if BUILD_FREICOIND
  dist_man1_MANS+=freicoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=freicoin-qt.1
endif

if BUILD_FREICOIN_CLI
  dist_man1_MANS+=freicoin-cli.1
endif

if BUILD_FREICOIN_TX
  dist_man1_MANS+=freicoin-tx.1
endif

if BUILD_FREICOIN_UTIL
  dist_man1_MANS+=freicoin-util.1
endif

if ENABLE_WALLET
if BUILD_FREICOIN_WALLET
  dist_man1_MANS+=freicoin-wallet.1
endif
endif
